@@ -835,6 +835,11 @@ void parse_args (int argc, char ** argv)
                 exit(EXIT_SUCCESS);
             }
         }
+
+        if (!strcmp(argv[1], "write_loopback")) {
+            netcfg_write_loopback();
+            exit(EXIT_SUCCESS);
+        }
         
         exit(EXIT_FAILURE);
     }
